# gql-authorization

./: Cargo.toml
src/: auth.rs  main.rs  schema.rs
